# cpimouse_vision_control

./: .travis.yml  CMakeLists.txt  README.md  package.xml
launch/: bagplay.launch  test-left-face.launch  test-right-face.launch  vision_control.launch
src/: face_to_face.cpp  face_to_face.cpp.org  face_to_face1.cpp  face_to_face2.cpp  face_to_face3.cpp
test/: test_face_to_face.py  travis_package_make.bash  travis_ros_install.bash
